# QuantumSimX

./: .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  API_C.md  AUDIT.md  BACKWARD_COMPATIBILITY.md  BRAND.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO.txt  Dockerfile  Doxyfile  ETHICS.md  GOVERNANCE.md  INCLUSION.md  INSTITUTION.md  LICENSE  MAINTAINERS.md  MARKETING.md  Makefile  NOTICE  PADDING.txt  PRESS.md  README.md  RELEASE.md  RELEASING.md  REPRODUCIBILITY.md  RISK_REGISTER.md  SECURITY.md  SECURITY_CONTACTS  SUPPORT.md  SUSTAINABILITY.md  THREAT_MODEL.md  (+6 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  pages.yml  scorecard.yml  slsa-provenance.yml  slsa.yml
benchmarks/: bench_apply.cpp
bindings/python/: module.cpp
cli/: main.cpp
cmake/: Options.cmake  QuantumSimXConfig.cmake.in  Sanitizers.cmake  quantum-simx-c.pc.in  quantum-simx.pc.in
configs/: accurate.cfg  fast.cfg
docs/: WHITEPAPER.md
docs/adr/: ADR-0001-architecture.md  ADR-0002-backends.md
docs/man/: quantum-simx.1
docs/schema/: output.schema.json
examples/: bell.qasm  bell.qsx  ghz3.qsx  noisy_dephase.qsx  noisy_depol.qasm  noisy_depol.qsx
extras/completion/: _quantum-simx  quantum-simx.bash  quantum-simx.fish
gui/: main_qt.cpp  main_window.cpp  main_window.hpp
include/quantum/: c_api.h  circuit.hpp  density_matrix.hpp  dot.hpp  gates.hpp  grad.hpp  map.hpp  map_topo.hpp  mitigate.hpp  optimize.hpp  qasm.hpp  random.hpp  rng.hpp  state_vector.hpp  types.hpp  unitary.hpp
mpi/: distributed_state.cpp  distributed_state.hpp
sbom/: sbom.cdx.json
src/: c_api.cpp  circuit.cpp  density_matrix.cpp  gates.cpp  grad.cpp  optimize.cpp  qasm.cpp  random.cpp  state_vector.cpp  unitary.cpp
tests/: fuzz_parse.cpp  test_density_equiv.cpp  test_entropy.cpp  test_grad.cpp  test_lint.cpp  test_main.cpp  test_map_line.cpp  test_mitigate.cpp  test_opt.cpp  test_parser.cpp  test_readout.cpp  test_stats.cpp  test_unitary.cpp
tools/: check_spdx.py
topologies/: heavy_hex_8.topo
